updated gallery slider

--- a/gallery.html
+++ b/gallery.html
@@ -67,6 +67,18 @@
         <img src="images/event-1.jpg" class="gallery-img" alt="অনুষ্ঠান ৩" data-bs-toggle="modal" data-bs-target="#photoModal" onclick="showImage(this)">
       </div>
 
+      
+      <!-- Image 3 -->
+      <div class="col-md-4 col-sm-6">
+        <img src="images/event-1.jpg" class="gallery-img" alt="অনুষ্ঠান ৩" data-bs-toggle="modal" data-bs-target="#photoModal" onclick="showImage(this)">
+      </div>
+
+      
+      <!-- Image 3 -->
+      <div class="col-md-4 col-sm-6">
+        <img src="images/event-1.jpg" class="gallery-img" alt="অনুষ্ঠান ৩" data-bs-toggle="modal" data-bs-target="#photoModal" onclick="showImage(this)">
+      </div>
+
       <!-- More images... -->
     </div>
   </div>
