--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100 text-center">
-            <img src="images/photo-1.jpg" class="card-img-top" alt="Teacher Name">
+            <img src="images/Teacher-2.jpg" class="card-img-top" alt="Teacher Name">
             <div class="card-body">
               <h5 class="card-title">জনাব মোঃ কামাল হোসেন</h5>
               <p class="card-text">সহকারী শিক্ষক (গণিত)</p>
@@ -157,7 +157,7 @@
         </div>
         <div class="col">
           <div class="card h-100 text-center">
-            <img src="images/photo-2.jpg" class="card-img-top" alt="Teacher Name">
+            <img src="images/teacher-2.jpg" class="card-img-top" alt="Teacher Name">
             <div class="card-body">
               <h5 class="card-title">জনাব মোঃ কামাল হোসেন</h5>
               <p class="card-text">সহকারী শিক্ষক (গণিত)</p>
@@ -167,7 +167,7 @@
 
         <div class="col">
           <div class="card h-100 text-center">
-            <img src="images/photo-1.jpg" class="card-img-top" alt="Teacher Name">
+            <img src="images/teacher-2.jpg" class="card-img-top" alt="Teacher Name">
             <div class="card-body">
               <h5 class="card-title">জনাব মোঃ কামাল হোসেন</h5>
               <p class="card-text">সহকারী শিক্ষক (গণিত)</p>
@@ -175,6 +175,7 @@
           </div>
         </div>
 
+        
 
         <!-- Repeat for more teachers -->
       </div>
